--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "cra-template": "1.2.0",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.14",
+    "vite": "^6.3.5",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -37,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "tailwindcss": "^3.4.17"
   }
 }
